feat: update path config

--- a/configs/WBC-SPH.yml
+++ b/configs/WBC-SPH.yml
@@ -88,6 +88,7 @@ pipeline:
       0.000015625
     ]
 
+  base_data_dir : # path to output data
   main_log_dir: ./logs
   train_sum_dir: ./train_log
   output_dir: ./output
