--- a/configs/other/WaterRamps5steps.yml
+++ b/configs/other/WaterRamps5steps.yml
@@ -88,6 +88,7 @@ pipeline:
       0.00001
     ]
 
+  base_data_dir : # path to output data
   main_log_dir: ./logs
   train_sum_dir: ./train_log
   output_dir: ./output
