--- a/configs/Liquid3d/polarnet_g.yml
+++ b/configs/Liquid3d/polarnet_g.yml
@@ -19,12 +19,14 @@ model:
   #  grav_eqvar: [0, -1, 0]
 
   loss:
-    weighted_mse:
-      typ: weighted_mse
+    weighted_mse_with_vel:
+      typ: weighted_mse_with_vel
       fac: 128.0
       gamma: 0.5
       neighbor_scale: 0.01
       box_neighbor_scale: 0.05
+      scale: 1.0
+      vel_scale: 0.1
       #pre_scale: 0.04
     dense_pbf:
       typ: dense_pbf
