--- a/configs/Liquid3d/gns.yml
+++ b/configs/Liquid3d/gns.yml
@@ -33,8 +33,8 @@ pipeline:
   batch_size: 1
   iter: 1000
 
-  window_bnds: [15000]
-  windows: [2, 3]
+  window_bnds: []
+  windows: [2]
   time_blend: 200
 
   #max_err: 0.0025 # 1/2 voxel
@@ -60,6 +60,23 @@ pipeline:
       0.0000625,
       0.00003125,
       0.000015625
+    ]
+    loss_boundaries: [
+      20000,
+      25000,
+      30000,
+      35000,
+      40000,
+      45000
+    ]
+    loss_values: [
+      10,
+      5,
+      2.5,
+      1.25,
+      0.625,
+      0.3125,
+      0.15625
     ]
 
   base_data_dir : ../data/output
