--- a/configs/dam_break/gns.yml
+++ b/configs/dam_break/gns.yml
@@ -5,47 +5,42 @@ dataset:
   #cache_dir: ./logs/cache/
 
 model:
-  name: CConv
-
+  name: GNS
   ckpt_path: # path to checkpoint
-  layer_channels: [32, 64, 64, 3]
-  kernel_size: [4, 4, 4]
-  coordinate_mapping: ball_to_cube_volume_preserving
-  interpolation: linear
-  window: poly6
   window_dens: poly6
-  ignore_query_points: True
-  use_bnds: False
-  use_acc: False
-  
-  particle_radii: [0.1125] #[0.05, 0.1, 0.2]
-  timestep: 0.0166666666
+  particle_radii: [0.02]
+  connectivity_radius: 0.052
+  timestep: 0.0166666666 # depends on stride of dataloader (timestep * stride)
   grav: -8.91818181818182
-  out_scale: [0.0078125, 0.0078125, 0.0078125] # 2D output
+  message_passing_steps: 10
+
+  #transformation:
+  #  grav_eqvar: [0, -1, 0]
+
 
   loss:
     weighted_mse:
       typ: weighted_mse
       fac: 128.0
       gamma: 0.5
-      neighbor_scale: 0.025
       scale: 1.1
-      #pre_scale: 0.04      
+      fluid_method: linear
+      #pre_scale: 0.04
 
 pipeline:
   name: Simulator
   version: 3d
 
   max_epoch: 50
-  batch_size: 16
+  batch_size: 1
   iter: 1000
 
   window_bnds: []
-  windows: [2] 
+  windows: [2]
   time_blend: 200
 
   warm_up_bnds: []
-  max_warm_up: [0] 
+  max_warm_up: [0]
 
   optimizer:
     lr_boundaries: [
@@ -59,9 +54,24 @@ pipeline:
       0.001,
       0.0005,
       0.00025,
-      0.000125, 
+      0.000125,
       0.0000625,
-      0.00003125
+      0.00003125,
+    ]
+    loss_boundaries: [
+      25000,
+      30000,
+      35000,
+      40000,
+      45000
+    ]
+    loss_values: [
+      5,
+      2.5,
+      1.25,
+      0.625,
+      0.3125,
+      0.15625
     ]
 
   base_data_dir : ../data/output
@@ -80,31 +90,19 @@ pipeline:
       repeat: True
       shuffle_buffer: 512
       is2d: False
-      num_workers: 2
-      sample_cnt: 25
+      num_workers: 1
+#      sample_cnt: 25
       
-      # augment:
-      #   jitter_inp: 
-      #     channels: 
-      #       pos: [0.0005, 0.0005, 0.0005] # 1% of dx
-
-      # augment:
-      #   jitter: 
-      #     channels: 
-      #       pos: 0.001
-      #       vel: 0.001
-      #       grav: 0.001
-      #       box: 0.001
-      #       box_normals: 0.001
-        
-      #   shuffle: True
       augment:
+        jitter_inp:
+          channels:
+            pos: [0.001, 0.001, 0.001] # 1% of dx
         rotate:
           rot_axis: 1
 
     valid:
       stride: 1
-      time_end: 50
+      time_end: 10
       random_start: 200
 
     test:
